--- a/html/cdc.html
+++ b/html/cdc.html
@@ -12,10 +12,11 @@
 <body>
     <header class="firstpage">
         <h1 class="coversheet__title">Cahier des charges Projet fil rouge</h1>
-
+        <!-- <img src="/contenu/logo_pfr.jpg" alt="logo ?"> -->
     </header>
 
     <section class="summary">
+        <h2 class="medium__title">Sommaire</h2>
         <ol class="list">
             <p>I.Présentation projet</p>
             <li>
@@ -228,8 +229,47 @@
         </div>
 
     </section>
+    <section class="firstpage">
+        <h1 class="coversheet__title">II.Description graphique et ergonomique</h1>
+
+    </section>
+
+    <section class="paragraphe">
+        <h2 class="medium__title">1.Charte graphique</h2>
+        <p class="parargraphe__style">Nous proposerons plusieurs palettes de couleurs issu du monde de la bande-déssinée
+            qui devra être en
+            adéquation
+            avec la double vocations du site : être un espace de partage(blogging) pseudo-professionnel(se voulant être
+            potentiellement un tramplin professionels) et aussi un
+            espace de
+            loisir.Les émotions suggérées seront le bonheur, lumière, optimisme, créativité, ainsi que l'énergie, le
+            confort,
+            la vitalité et le dynamisme.Nous souhaiterions aussi inclure des émotions plus proche du monde
+            professionel: la responsabilité,la confiance et le calme. Nous présenterons 2 panels issu de la
+            bande-déssinée Européenne et japonaise: </p>
+        <div class="article__color">
+            <h3 class="small__title">bande-déssinée française</h3>
+            <p class="parargraphe__style">Veritable îcone de la B-D française et des éditions soleil, Lanfeust touche un
+                large panel de
+                consommateurs grâce à de nombreuses rééditions et un univers étendu("Trolls de Troy","Lanfeust des
+                Etoiles"......)</p>
+
+            <img src="/contenu/palette/lanfeust_palette1.png" alt="palette lanfeust tome1">
+            <img src="/contenu/palette/lanfeust_palette3.png" alt="palette lanfeust tome8">
+        </div>
+        <div class="article__color">
+            <h3 class="small__title">bande-déssinée Japonaise(MANGA)</h3>
+            <p class="parargraphe__style">trois proposition de  palettes de couleur obtenu auprès de 3 grandes licenses japonaise a la
+                célébrité mondiale et devenu incourtounable même pour les néophytes:
+            </p>
+
+            <img src="/contenu/palette/dbz_palette.png" alt="palette dbz">
+            <img src="/contenu/palette/onepiece_palette.png" alt="One pièce">
+            <img src="/contenu/palette/naruto_palette.png" alt="naruto">
+        </div>
 
 
+    </section>
 </body>
 
 </html>
