ajout des couleurs

--- a/html/cdc.html
+++ b/html/cdc.html
@@ -34,7 +34,9 @@
 
         </ol>
         <ol class="list">
-            <p>II.Description graphique et ergonomique</p>
+            
+            <a href="#graph">II.Description graphique et ergonomique</a>
+            
             <li>
                 Charte graphique
             </li>
@@ -230,7 +232,7 @@
 
     </section>
     <section class="firstpage">
-        <h1 class="coversheet__title">II.Description graphique et ergonomique</h1>
+        <h1 class="coversheet__title" id="graph">II.Description graphique et ergonomique</h1>
 
     </section>
 
@@ -267,6 +269,33 @@
             <img src="/contenu/palette/onepiece_palette.png" alt="One pièce">
             <img src="/contenu/palette/naruto_palette.png" alt="naruto">
         </div>
+    <div class="color_ul">
+        <ul class="color_list">
+            <h4>lanfeust 1</h4>
+            <li class="color_list1">#0388A6</li>
+            <li class="color_list2">#0396A6</li>
+            <li class="color_list3">#F2E8D5</li>
+            <li class="color_list4">#F2AC57</li>
+            <li class="color_list5">#BF4A30</li>
+        </ul>
+        <ul class="color_list">
+            <h4>lanfeust 2</h4>
+            <li class="color_list6">#62B7D9</li>
+            <li class="color_list7">#F2B279</li>
+            <li class="color_list8">#F26241</li>
+            <li class="color_list9">#260101</li>
+            <li class="color_list10">#A62E2E</li>
+
+        </ul>
+        <ul class="color_list">
+            <h4>dbz+onepice</h4>
+            <li class="color_list11">#024873</li>
+            <li class="color_list12">#F29F05</li>
+            <li class="color_list13">#D97904</li>
+            <li class="color_list14">#D9D055</li>
+            <li class="color_list15">#D9C359</li>
+        </ul>
+    </div>
 
 
     </section>
